--- a/Admin/src/assets/i18n/sp.json
+++ b/Admin/src/assets/i18n/sp.json
@@ -10,7 +10,9 @@
         "CRM": "CRM",
         "ECOMMERCE": "Comercio electrónico",
         "LEARNING": "Aprendiendo",
-        "REALESTATE": "Bienes raíces"
+        "REALESTATE": "Bienes raíces",
+        "GRAPHS": "Graficos",
+        "MAPS": "Mapas"
       }
     },
     "APPS": {
