Agregado componente para el formulario con en que se va a predecir

--- a/Admin/src/assets/i18n/en.json
+++ b/Admin/src/assets/i18n/en.json
@@ -169,7 +169,8 @@
         "WIZARD": "Wizard",
         "EDITORS": "Editors",
         "FILEUPLOADS": "File Uploads",
-        "FORMLAYOUTS": "Form Layouts"
+        "FORMLAYOUTS": "Form Layouts",
+        "TESISFORM": "Predict"
       }
     },
     "TABLES": {
