--- a/Admin/src/assets/i18n/sp.json
+++ b/Admin/src/assets/i18n/sp.json
@@ -166,7 +166,8 @@
         "WIZARD": "Mago",
         "EDITORS": "Editoras",
         "FILEUPLOADS": "Cargas de archivos",
-        "FORMLAYOUTS": "Diseños de formulario"
+        "FORMLAYOUTS": "Diseños de formulario",
+        "TESISFORM": "Predecir"
       }
     },
     "TABLES": {
