--- a/Admin/src/assets/i18n/en.json
+++ b/Admin/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
       "TEXT": "Tableros",
       "LIST": {
         "ECOMMERCE": "Inicio",
+        "INFO": "Información",
         "GRAPHS": "Estadisticas entre variables",
         "MAPS": "Mapa de calor"
       }
